fix: text-align problem

--- a/zod/src/components/Dashboard/BaseDashboard/CreateProject.css
+++ b/zod/src/components/Dashboard/BaseDashboard/CreateProject.css
@@ -92,22 +92,15 @@
 
 .cp-outermostbox {
   width: 60%;
-  height: 400px;
+  /*height: 500px;*/
   border: 1px solid #DBDBDB;
   box-shadow: 0 0 8px #DBDBDB;
-  margin-top: 5%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.cp-box-contents {
-
+  margin-top: 4%;
+  background-color: orange;
 }
 
 .cp-box-hdn {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 20px;
+  margin-top: 10px;
   border: 1px solid #4CBF53;
   width: 180px;
   height: 31px;
@@ -120,23 +113,12 @@
   padding-left: 1px;
 }
 
-.cp-inp-wrapper {
-  margin-top: 5%;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;  
+.cp-box-contents {
+  margin-bottom: 50px;
+  background-color: orchid;
+  width: 80%;
+  margin-top: 20px;
 }
+.cpm-box {
 
-.cp-inp-pname {
-  width: 30%;
-  margin-bottom: 20px;  
-}
-
-.cp-inp-deadline {
-  width: 30%;
-  margin-bottom: 20px;
-}
-
-.cp-inp-addmember {
-  margin-left: -18%;
 }
